your commit message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="dark" style="min-height:100vh;display:flex;align-items:center;justify-content:center;padding:2rem">
   <!-- Splash screen: place `logo.png` next to this HTML file -->
   <div id="splash">
-    <img src="/One Sixty Gradient Logo white.png" alt="St Benedict's College" id="splash-logo">
+    <img src="./One%20Sixty%20Gradient%20Logo%20white.png" alt="St Benedict's College" id="splash-logo">
   </div>
     <div class="flags-stack" style="display:flex;flex-direction:column;gap:1.2rem;align-items:center">
     <div class="flag-card national">
