your commit message here

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     </div>
 
     <div class="flag-card group">
-      <div class="flag-text" role="region">Jone Ambulance</div>
+      <div class="flag-text" role="region">John Ambulance</div>
     </div>
 
     <div class="flag-card group">
